[gd_scene load_steps=11 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Flies.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ennemies/Ennemy3.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Fly",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.22806
height = 7.50654

[sub_resource type="CapsuleShape2D" id=6]
height = 12.0595

[sub_resource type="CircleShape2D" id=7]
radius = 262.261

[node name="Flies" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
script = ExtResource( 2 )
speed = -300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 15, 0 )
frames = SubResource( 4 )
animation = "Fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 5 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
rotation = 1.5708
shape = SubResource( 6 )

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
